--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-li{
-    list-style-type: none;
-    margin: 1rem 0rem;
-
+li {
+  list-style-type: none;
+  margin: 1rem 0;
 }
 
 ul {
-    padding-left: 0;
+  padding-left: 0;
 }
