--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,20 @@ ul {
   padding-left: 0;
 }
 
+.navbar{
+width: 80%;
+padding: 1rem 1rem;
+border: none;
+}
+
+.bordered{
+  border-right: none;
+}
+
+.navbar-brand{
+  font-size: 16px;
+}
+
 #books {
   border: 2px solid black;
   border-radius: 7px;
@@ -74,5 +88,23 @@ input {
     display: flex;
     flex-direction: column;
     width: 55%;
+  }
+
+  .nav-container{
+    padding: 0;
+  }
+
+  .navbar{
+    width: 80%;
+    padding: 1rem 1rem;
+    border: solid 2px black;
+    }
+
+   .navbar-brand{
+      font-size: 24px;
+    }
+
+  .bordered{
+    border-right: solid 2px black;
   }
 }
